fixed issues with how parts of the images were going off screen on larger devices

--- a/map-app/src/App.css
+++ b/map-app/src/App.css
@@ -85,7 +85,6 @@ body{
 }
 
 .carousel img {
-  max-width: 100%;
   height: 40vh;
 
   
@@ -107,7 +106,9 @@ h1{
   z-index: 1;
 }
 
-.overlayContent {height: 90%;}
+.overlayContent {
+  height: 90%;
+}
 
 .overlayContent h2{
   text-align: center;
